Fixed 1. Написать тест на PostServlet. #408617